# googletest_example

./: CMakeLists.txt
src/: Example.cpp  Example.hpp
test/: CMakeLists.txt  ExampleTests.cpp
